[package]
name        = "oxigraph-nova-server"
description = "SPARQL 1.2 HTTP endpoint for Oxigraph Nova (SPARQL Protocol)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
oxigraph-nova-core         = { path = "../nova-core" }
oxigraph-nova-query        = { path = "../nova-query" }
oxigraph-nova-storage-ring = { path = "../nova-storage-ring" }
oxrdf          = { workspace = true }
oxttl          = { workspace = true }
oxrdfxml       = { workspace = true }
oxjsonld       = { workspace = true }
spargebra      = { workspace = true }

sparesults     = { workspace = true }
tokio          = { workspace = true }
axum           = { workspace = true }
tower-http     = { workspace = true }
serde          = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "nova_serve"
path = "src/bin/nova_serve.rs"

[dev-dependencies]
oxigraph-nova-storage-memory = { path = "../nova-storage-memory" }
tower             = { workspace = true }   # Router::oneshot for integration tests
serde_json        = { workspace = true }
pretty_assertions = { workspace = true }
tokio             = { workspace = true }
ureq              = "2"    # blocking HTTP client for the crash-recovery integration
                             # test (tests/crash_recovery.rs) — spawns and talks to a
                             # real `nova_serve` subprocess; matches the same `ureq`
                             # version already used by tests/w3c's harness.

