[package]
name        = "oxigraph-nova-server"
description = "SPARQL 1.2 HTTP endpoint for Oxigraph Nova (SPARQL Protocol)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
# Opt-in Tantivy full-text search (`text:query`/`text:contains`), forwarded
# straight through to `oxigraph-nova-storage-ring`'s own `fulltext` feature.
fulltext = ["oxigraph-nova-storage-ring/fulltext"]
# Opt-in outbound HTTP client, forwarded straight through to
# `oxigraph-nova-query`'s own `http-client` feature: unblocks SPARQL 1.1
# Update's `LOAD <iri>` and gives `Server::new` a default, real HTTP-backed
# `SERVICE` clause handler (`oxigraph_nova_query::HttpServiceHandler`) —
# see `Server::new`'s doc comment.
http-client = ["oxigraph-nova-query/http-client"]
# Opt-in GeoSPARQL extension functions (geof:distance, sf:intersects, etc.),
# forwarded straight through to `oxigraph-nova-query`'s own `geosparql`
# feature. Advertised in the SPARQL Service Description document.
geosparql = ["oxigraph-nova-query/geosparql", "dep:spargeo"]




[dependencies]
oxigraph-nova-core         = { path = "../nova-core" }
oxigraph-nova-query        = { path = "../nova-query" }
oxigraph-nova-storage-ring = { path = "../nova-storage-ring" }
oxigraph-nova-reasoning    = { path = "../nova-reasoning" }
oxrdf          = { workspace = true }
oxrdfio        = { workspace = true }
spargebra      = { workspace = true }

sparesults     = { workspace = true }
tokio          = { workspace = true }
tokio-stream   = { workspace = true }
axum           = { workspace = true }
tower-http     = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
mimalloc         = { version = "0.1.52", features = ["extended"] }
libmimalloc-sys  = { version = "0.1.49", features = ["extended"] }
# Opt-in via the `geosparql` feature: only needed to enumerate
# `GEOSPARQL_EXTENSION_FUNCTIONS`'s IRIs for the SPARQL Service Description
# (`sd:extensionFunction` triples) — see `service_description.rs`.
spargeo          = { workspace = true, optional = true }




[[bin]]
name = "nova_serve"
path = "src/bin/nova_serve.rs"

[dev-dependencies]
oxigraph-nova-storage-memory = { path = "../nova-storage-memory" }
tower             = { workspace = true }   # Router::oneshot for integration tests
pretty_assertions = { workspace = true }

tokio             = { workspace = true }
ureq              = "3"    # blocking HTTP client for the crash-recovery integration
                             # test (tests/crash_recovery.rs) — spawns and talks to a
                             # real `nova_serve` subprocess; matches the same `ureq`
                             # version already used by tests/w3c's harness.
