[package]
name        = "oxigraph-nova-storage-common"
description = "Generic WAL/MANIFEST/dictionary persistence machinery reusable by any QuadStore backend"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
oxigraph-nova-core = { path = "../nova-core" }
oxrdf         = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
crc32fast     = "1.5"     # WAL record + MANIFEST framing checksum
epserde       = { version = "0.12.5", features = ["derive", "mmap", "std"] } # mmap load of nova.dict.<gen> (DictSnapshot)
# NOTE: `nova.dict.<gen>` is written uncompressed (see dict_snapshot.rs) so
# it can be mmap'd directly, mirroring `nova-storage-ring`'s `nova.snapshot.<gen>`


[dev-dependencies]
pretty_assertions = { workspace = true }
