[package]
name        = "oxigraph-nova-storage-common"
description = "Generic WAL/MANIFEST/dictionary persistence machinery reusable by any QuadStore backend"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
default = ["mmap"]
# See `oxigraph-nova-core`'s `mmap` feature doc comment. Gates
# `dict_snapshot.rs`'s `load_mmap`-based functions.
mmap = ["epserde/mmap", "oxigraph-nova-core/mmap"]

[dependencies]
oxigraph-nova-core = { path = "../nova-core", default-features = false }
oxrdf         = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
crc32fast     = "1.5"     # WAL record + MANIFEST framing checksum
epserde       = { version = "0.12.5", default-features = false, features = ["derive", "std"] } # mmap load of nova.dict.<gen> (DictSnapshot); see `mmap` feature above

# NOTE: `nova.dict.<gen>` is written uncompressed (see dict_snapshot.rs) so
# it can be mmap'd directly, mirroring `nova-storage-ring`'s `nova.snapshot.<gen>`


[dev-dependencies]
pretty_assertions = { workspace = true }
