[package]
name        = "oxigraph-nova-storage-memory"
description = "In-memory QuadStore implementation for testing and development"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
parking_lot = { workspace = true }   # MemoryStore RwLock (no poison)
oxigraph-nova-core = { path = "../nova-core" }
oxrdf         = { workspace = true }
anyhow        = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
