[package]
name        = "oxigraph-nova-storage-ring"
description = "Braided Ring pilot (cyclic QWT / NOVARNG1 / D2) + temporary re-export of production LOUDS LoudsStore"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
default = ["mmap"]
# Opt-in Tantivy-backed full-text search — forwarded to the LOUDS crate
# (production LoudsStore). Zero-cost when disabled.
fulltext     = ["oxigraph-nova-storage-louds/fulltext"]
# Research-only DROP-branch APIs (D3/D4/E1 counters, C1/prefetch mutation knobs)
# for the Braided Ring pilot.
diagnostics  = []
# Braided Ring pilot: cyclic QWT + NOVARNG1 + D2. Not on LoudsStore SPARQL path.
# Plain QWT256 C_p by default. Opt into Huffman C_p with `ring-huffman-cp`
# (does not auto-enable; keep them independent for A/B size/latency).
cyclic-ring-pilot = ["dep:qwt", "dep:memmap2"]
# E5.9B Phase 2–4 (research/notes/e5.9b-qwt-substrate-matrix.md §7/§8):
# Huffman C_p substrate (HuffColP / HQWA). Requires `cyclic-ring-pilot`.
# When enabled, product build paths default C_p to PredicateColumn::Huff;
# without it, C_p is plain QWT256. Enable explicitly for Huffman A/B:
#   cargo run -p oxigraph-nova-bench --features ring-huffman-cp --example memory_report
#   cargo test -p oxigraph-nova-storage-ring --features cyclic-ring-pilot,ring-huffman-cp
ring-huffman-cp = ["cyclic-ring-pilot"]

# Forwarded to LOUDS + common + core for LoudsStore::open / snapshot mmap path.
# Disabled (via `default-features = false`) for the wasm32 build
# (`oxigraph-nova-js`), which is in-memory-only and never calls
# `LoudsStore::open`.
mmap = ["oxigraph-nova-storage-louds/mmap"]

[dependencies]
# Production LOUDS LoudsStore — re-exported from lib.rs for dependent compatibility.
# Also used by Phase 5 RingStore for `delta::Delta` reuse.
oxigraph-nova-storage-louds = { path = "../nova-storage-louds", default-features = false }

# Dictionary / QuadStore / TrieIterator for Phase 4b join_scan + Phase 5 RingStore
# (cyclic-ring-pilot only; not default SPARQL cutover).
oxigraph-nova-core = { path = "../nova-core", default-features = false }

# Used by Ring mmap error types (`MappedQwtError` / `MappedRingError`).
thiserror = { workspace = true }

# RingStore Mutex (Phase 5). Same lock style as LOUDS LoudsStore.
parking_lot = { workspace = true }

# Braided Ring substrate (optional; feature `cyclic-ring-pilot`).
# Version must match vendor/qwt/Cargo.toml so [patch.crates-io] actually
# applies (semver mismatch silently demotes the patch to [patch.unused] and
# falls back to a real crates.io 0.4.0 lacking DataLine/SuperblockPlain/
# range_next_value/range_distinct_iter — see research/notes/e5.9b-*.md).
qwt     = { version = "0.5.0", optional = true }
memmap2 = { version = "0.9", optional = true }




[dev-dependencies]
pretty_assertions = { workspace = true }
