[package]
name    = "oxigraph-nova-w3c-harness"
version = "0.1.0"
edition = "2024"
publish = false

# This crate has no library target — it is a test-only workspace member.
# All its code lives in tests/harness.rs and is compiled only when running
# `cargo test -p oxigraph-nova-w3c-harness`.

[dependencies]
oxigraph-nova-core           = { path = "../../crates/core/nova-core" }
oxigraph-nova-query          = { path = "../../crates/core/nova-query" }
oxigraph-nova-engine-memory = { path = "../../crates/engines/nova-engine-memory" }
oxigraph-nova-engine-ring   = { path = "../../crates/engines/nova-engine-ring" }
oxrdf      = { workspace = true }
oxttl      = { workspace = true }
oxrdfxml   = { workspace = true }  # some W3C SPARQL 1.1 subquery fixtures ship .rdf (RDF/XML) data
spargebra  = { workspace = true }
sparesults = { workspace = true }
spareval   = { workspace = true } # differential-testing oracle, gated behind OXIGRAPH_W3C_SPAREVAL_ORACLE=1

anyhow     = { workspace = true }
ureq       = "3"           # blocking HTTP for fetch+cache of W3C test files


