[package]
name        = "oxigraph-nova-mcp"
description = "MCP (Model Context Protocol) server exposing Oxigraph Nova SPARQL query/update/data-model-discovery tools to LLM agents"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
default = []
# Link LOUDS backend so it self-registers into the inventory (default product).
louds-backend = ["dep:oxigraph-nova-engine-louds"]
# Link Ring so it self-registers (optional).
ring-backend = [
    "dep:oxigraph-nova-engine-ring",
    "oxigraph-nova-engine-ring/cyclic-ring",
    "oxigraph-nova-engine-ring/ring-huffman-cp",
]
rocksdb-backend = ["dep:oxigraph-nova-engine-rocksdb"]
fulltext = [
    "oxigraph-nova-engine-louds?/fulltext",
    "oxigraph-nova-engine-ring?/fulltext",
]

[dependencies]
oxigraph-nova-core         = { path = "../../core/nova-core" }
oxigraph-nova-query        = { path = "../../core/nova-query" }
# Backends are optional deps whose only purpose for this crate is to pull
# their `inventory::submit!` BackendFactory registrations into the binary.
# Default product builds enable `louds-backend` from nova-cli.
oxigraph-nova-engine-louds = { path = "../../engines/nova-engine-louds", optional = true, default-features = false, features = ["mmap"] }
oxigraph-nova-engine-ring  = { path = "../../engines/nova-engine-ring", optional = true, default-features = false, features = ["mmap"] }
oxigraph-nova-engine-rocksdb = { path = "../../engines/nova-engine-rocksdb", optional = true }
# Reasoning is a lightweight crate (no heavy deps of its own), so — mirroring
# `oxigraph-nova-server`'s own unconditional dependency on it — it's always
# compiled in here rather than behind its own extra feature flag; the only
# heavyweight *new* deps this crate introduces are `rmcp`/`schemars`
# themselves, gated one level up at `oxigraph-nova-cli`'s `mcp` feature.
oxigraph-nova-reasoning    = { path = "../../core/nova-reasoning" }
# openCypher support for the `cypher_query`/`cypher_update` tools — a thin
# translation layer to SPARQL algebra, no heavy deps of its own (see
# `oxigraph-nova-cypher`'s own Cargo.toml: just oxrdf/spargebra/anyhow).
oxigraph-nova-cypher       = { path = "../../core/nova-cypher" }

rmcp       = { workspace = true }

schemars   = { workspace = true }
oxrdf      = { workspace = true }
oxrdfio    = { workspace = true }
spargebra  = { workspace = true }
sparesults = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
anyhow     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# Tests need at least one backend registered.
oxigraph-nova-engine-louds = { path = "../../engines/nova-engine-louds", default-features = false, features = ["mmap"] }
