[package]
name        = "oxigraph-nova-store"
description = "Monolithic Store facade over any self-registered StorageEngine + the SPARQL evaluator — an oxigraph::store::Store-shaped embedding API for Rust callers and language bindings"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
default = ["mmap", "louds-backend"]
# Opt-in Tantivy full-text search, forwarded to whichever backends are linked.
fulltext = [
    "oxigraph-nova-engine-louds?/fulltext",
    "oxigraph-nova-engine-ring?/fulltext",
]

# Opt-in outbound HTTP client, forwarded through to nova-query's own
# `http-client` feature: unblocks SPARQL 1.1 Update's `LOAD <iri>` and
# makes `oxigraph_nova_query::HttpServiceHandler` available for callers to
# attach via `QueryOptions::with_service_handler`.
http-client = ["oxigraph-nova-query/http-client"]
# Opt-in GeoSPARQL 1.1 extension functions (geof:distance, sf:intersects,
# etc.), forwarded through to nova-query's own `geosparql` feature. Dispatch
# is automatic once compiled in — no new `Store` API is needed.
geosparql = ["oxigraph-nova-query/geosparql"]
# Force-link the LOUDS backend so its `inventory::submit!` BackendFactory
# is present. Default-on. Delete/disable this feature (and the louds crate
# edge) and LOUDS simply disappears from the registry.
louds-backend = ["dep:oxigraph-nova-engine-louds"]
# Cyclic-QWT RingStore backend. Enables cyclic-ring + Huffman C_p
# and force-links the Ring BackendFactory. Default `Store::new`/`Store::open`
# still pick the registry default (louds when present).
ring-backend = [
    "dep:oxigraph-nova-engine-ring",
    "oxigraph-nova-engine-ring/cyclic-ring",
    "oxigraph-nova-engine-ring/ring-huffman-cp",
]
# Oxigraph-compatible RocksDB backend (drop-in data directories).
rocksdb-backend = ["dep:oxigraph-nova-engine-rocksdb"]
# Forwards to `oxigraph-nova-core`'s `mmap` feature (see its doc comment):
# mmap-based zero-copy disk persistence, requiring `mmap-rs` (no wasm32
# support). Default-on for native builds; `oxigraph-nova-js`'s wasm32 build
# disables it (`default-features = false` on this crate's dependency edge).
mmap = [
    "oxigraph-nova-core/mmap",
    "oxigraph-nova-engine-louds?/mmap",
    "oxigraph-nova-engine-ring?/mmap",
    "oxigraph-nova-query/mmap",
    "oxigraph-nova-reasoning/mmap",
]


[dependencies]
oxigraph-nova-core            = { path = "../../core/nova-core", default-features = false }
oxigraph-nova-engine-louds   = { path = "../../engines/nova-engine-louds", default-features = false, optional = true }
oxigraph-nova-engine-ring    = { path = "../../engines/nova-engine-ring", default-features = false, optional = true }
oxigraph-nova-engine-rocksdb = { path = "../../engines/nova-engine-rocksdb", optional = true }
oxigraph-nova-query           = { path = "../../core/nova-query", default-features = false }
oxigraph-nova-reasoning       = { path = "../../core/nova-reasoning", default-features = false }

oxrdf      = { workspace = true }
oxrdfio    = { workspace = true }
spargebra  = { workspace = true }
sparesults = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tempfile = "3"
